--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Razak</title>
+    <style>
+      #root {
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
